--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/images/logo-v1.png" alt="">
-          <h1>DigiMedia HTML5 Template</h1>
-          <h4>Please choose one of the three variations below.</h4>
+          <h1>환영합니다
+            다음문장
+            다음문장
+          </h1>
+          <h4>Welcome to eco</h4>
           <div class="first-button scroll-to-section">
             <a href="#demos">Choose Demo</a>
           </div>
@@ -69,18 +72,6 @@ https://templatemo.com/tm-568-digimedia
           <div class="demo-item">
             <a href="homepage_1.html"><img src="assets/images/demo-1.jpg" alt="DigiMedia - variation 1"></a>
             <h4>Version 1</h4>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="demo-item">
-            <a href="homepage_2.html"><img src="assets/images/demo-2.jpg" alt="DigiMedia - variation 2"></a>
-            <h4>Version 2</h4>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="demo-item">
-            <a href="homepage_3.html"><img src="assets/images/demo-3.jpg" alt="DigiMedia - variation 3"></a>
-            <h4>Version 3</h4>
           </div>
         </div>
       </div>
