--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-4">
           <div class="demo-item">
-            <a href="homepage_1.html"><img src="assets/images/demo-1.jpg" alt="DigiMedia - variation 1"></a>
+            <a href="homepage_1.html"><img src="assets/images/demo-1.jpg"></a>
             <h4>Version 1</h4>
           </div>
         </div>
