--- a/homepage_1.html
+++ b/homepage_1.html
@@ -110,13 +110,13 @@ https://templatemo.com/tm-568-digimedia
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h6>Digital Media Agency</h6>
-                    <h2>We Boost Your Website Traffic</h2>
-                    <p>This template is brought to you by TemplateMo website. Feel free to use this for a commercial purpose. You are not allowed to redistribute the template ZIP file on any other template website. Thank you.</p>
+                    <h6>Digital Media ECO</h6>
+                    <h2>IT ECO 구조</h2>
+                    <p> IT 생태계의 구성에 대해 알아보고자 한다.<br> 디바이스 네트워크 콘텐츠 빅데이터 보안<br> 위 5가지에 대하여 알아보자. Thank you.</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
-                      <a href="#contact">Free Quote</a>
+                      <a href="#contact">찾아오시는길</a>
                     </div>
                   </div>
                 </div>
@@ -147,10 +147,10 @@ https://templatemo.com/tm-568-digimedia
               <div class="about-right-content">
                 <div class="section-heading">
                   <h6>About Us</h6>
-                  <h4>Who is DigiMedia <em>Agency</em></h4>
+                  <h4><em>IT 생태계란?</em></h4>
                   <div class="line-dec"></div>
                 </div>
-                <p>We hope this DigiMedia template is useful for your work. You can use this template for any purpose. You may <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">contribute a little amount</a> via PayPal to <a href="https://templatemo.com/contact" target="_blank">support TemplateMo</a> in creating new templates regularly.</p>
+                <p> 정보기술(IT) 산업 내의 다양한 기업, 기관, 단체, 개인 등이 서로 협력하고 경쟁하며 상호작용하는 복잡한 시스템을 의미합니다. 이는 단순히 IT 산업 내의 구성 요소들만을 포함하는 것이 아니라, IT 기술과 서비스를 활용하는 사용자, 정부, 교육기관, 연구기관 등 다양한 외부 요소들까지 포함하는 <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">광범위한 개념</a>입니다.</p>
                 <div class="row">
                   <div class="col-lg-4 col-sm-4">
                     <div class="skill-item first-skill-item wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
@@ -234,31 +234,31 @@ https://templatemo.com/tm-568-digimedia
                     <div class="first-thumb active">
                       <div class="thumb">
                         <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
-                        Apartments
+                        디바이스
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-02.png" alt=""></span>
-                        Food &amp; Life
+                        네트워크
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-03.png" alt=""></span>
-                        Cars
+                        콘텐츠
                       </div>
                     </div>
                     <div>
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-04.png" alt=""></span>
-                        Shopping
+                        빅데이터
                       </div>
                     </div>
                     <div class="last-thumb">
                       <div class="thumb">                 
                         <span class="icon"><img src="assets/images/service-icon-01.png" alt=""></span>
-                        Traveling
+                        보안
                       </div>
                     </div>
                   </div>
@@ -271,12 +271,11 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>SEO Analysis &amp; Daily Reports</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
+                                <h4>디바이스 (Device)</h4>
+                                <p>어떠한 입력을 제공하거나, 출력을 제공받거나, 둘다 수행할 수 있는 능력을 가지는 장치다.
+                                  쉽게 말하면 우리 주변에서 쉽게 볼 수 있는 다양한 전자기기에 사용하 수 있는 표현이다.
+                                  디바이스의 범위는 굉장히 넓고, 그 종류가 다양해지고 있다.</p>
+                                <div class="ticks-list"><span><i class="fa fa-check"></i> 컴퓨터 디바이스</span> <span><i class="fa fa-check"></i> 포터블 디바이스</span> <span><i class="fa fa-check"></i> 기타 디바이스</span>
                               </div>
                             </div>
                             <div class="col-lg-6 align-self-center">
@@ -295,11 +294,10 @@ https://templatemo.com/tm-568-digimedia
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>Healthy Food &amp; Life</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
+                                <p>어떠한 입력을 제공하거나, 출력을 제공받거나, 둘다 수행할 수 있는 능력을 가지는 장치다.
+                                  쉽게 말하면 우리 주변에서 쉽게 볼 수 있는 다양한 전자기기에 사용하 수 있는 표현이다.
+                                  디바이스의 범위는 굉장히 넓고, 그 종류가 다양해지고 있다.</p>
+                                <div class="ticks-list"><span><i class="fa fa-check"></i> 컴퓨터 디바이스</span> <span><i class="fa fa-check"></i> 포터블 디바이스</span> <span><i class="fa fa-check"></i> 기타 디바이스</span>
                               </div>
                             </div>
                             <div class="col-lg-6 align-self-center">
@@ -366,7 +364,7 @@ https://templatemo.com/tm-568-digimedia
                                 <h4>Enjoy &amp; Travel</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
                                   dover lipsum lorem and the others.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
+                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span></div>
                                   <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
                               </div>
