--- a/index.html
+++ b/index.html
@@ -51,39 +51,23 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-12">
           <img src="assets/images/logo-v1.png" alt="">
-          <h1>환영합니다
-            다음문장
-            다음문장
+          <h1>환영합니다<br>
+            PCH's 생태계로<br>
+            입장하세요<br>
           </h1>
-          <h4>Welcome to eco</h4>
+          <h4>Welcome To PCH's ECO</h4>
           <div class="first-button scroll-to-section">
-            <a href="#demos">Choose Demo</a>
+            <a href="homepage_1.html">입장하기</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
-  <div class="demos" id="demos">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="demo-item">
-            <a href="homepage_1.html"><img src="assets/images/demo-1.jpg"></a>
-            <h4>Version 1</h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2022 DigiMedia Co., Ltd. All Rights Reserved. 
+          <p>Copyright © 2024 All Rights Reserved. 
           <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
         </div>
       </div>
