--- a/homepage_1.html
+++ b/homepage_1.html
@@ -293,10 +293,11 @@ https://templatemo.com/tm-568-digimedia
                           <div class="row">
                             <div class="col-lg-6 align-self-center">
                               <div class="left-text">
-                                <h4>Healthy Food &amp; Life</h4>
-                                <p>어떠한 입력을 제공하거나, 출력을 제공받거나, 둘다 수행할 수 있는 능력을 가지는 장치다.
-                                  쉽게 말하면 우리 주변에서 쉽게 볼 수 있는 다양한 전자기기에 사용하 수 있는 표현이다.
-                                  디바이스의 범위는 굉장히 넓고, 그 종류가 다양해지고 있다.</p>
+                                <h4>네트워크(Network) &amp; Life</h4>
+                                <p>네트워크는 Net+Work의 합성어로 그물망처럼 연결되어 있다는 의미를 가진다.
+                                  둘 이상의 컴퓨터가 그물망처럼 연결되어 있는 통신 형태이다.
+                                  우리는 네트워크 덕분에 데이터/리소스 등을 주고 받을 수 있는 것이다.
+                                </p>
                                 <div class="ticks-list"><span><i class="fa fa-check"></i> 컴퓨터 디바이스</span> <span><i class="fa fa-check"></i> 포터블 디바이스</span> <span><i class="fa fa-check"></i> 기타 디바이스</span>
                               </div>
                             </div>
