--- a/homepage_1.html
+++ b/homepage_1.html
@@ -593,8 +593,8 @@ https://templatemo.com/tm-568-digimedia
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-            <h6>Contact Us</h6>
-            <h4>Get In Touch With Us <em>Now</em></h4>
+            <h6>문의하기</h6>
+            <h4>저에게 <em>궁금</em>한 것이 있나요?</h4>
             <div class="line-dec"></div>
           </div>
         </div>
@@ -608,7 +608,7 @@ https://templatemo.com/tm-568-digimedia
               </div>
               <div class="col-lg-5">
                 <div id="map">
-                  <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://maps.google.com/maps?q=Ori+Station+Seongnam+South+Korea&t=&z=14&ie=UTF8&iwloc=&output=embed" width="100%" height="636px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-lg-7">
@@ -618,7 +618,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/phone-icon.png" alt="">
-                          <a href="#">010-020-0340</a>
+                          <a href="#">010-1004-1004</a>
                         </div>
                       </div>
                     </div>
@@ -626,7 +626,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/email-icon.png" alt="">
-                          <a href="#">our@email.com</a>
+                          <a href="#">team1377@naver.com</a>
                         </div>
                       </div>
                     </div>
@@ -634,7 +634,7 @@ https://templatemo.com/tm-568-digimedia
                       <div class="info-post">
                         <div class="icon">
                           <img src="assets/images/location-icon.png" alt="">
-                          <a href="#">123 Rio de Janeiro</a>
+                          <a href="#">대한민국 수지구</a>
                         </div>
                       </div>
                     </div>
